[metadata]
name = Ultimarc
version = 1.0.0-alpha.5
description = Tools for configuring Ultimarc USB devices
url = https://github.com/katie-snow/QtPyUltimarc
author = Katie Snow
author_email = snowywhitewater@gmail.com
license = GNU General Public License v3 (GPLv3)


project_urls =
    Homepage = https://github.com/katie-snow/QtPyUltimarc

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment :: Arcade
    Topic :: System :: Hardware :: Universal Serial Bus (USB)

long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE

[options]
python_requires = >= 3.7
packages = find_namespace:
include_package_data = True
install_requires =
    babel >= 2.12.1
    libusb >= 1.0.26b5
    jsonschema >= 4.17.3
    python-easy-json >= 1.1.2

[options.extras_require]
ui =
    pyside6 >= 6.5.0

[options.entry_points]
console_scripts =
    ultimarc = ultimarc.tools.__main__:run
gui_scripts =
    ultimarc-ui = ultimarc.main:run

[extract_messages]
input_dirs = ultimarc
output_file = ultimarc/locale/ultimarc.pot

[options.packages.find]
include = ultimarc*

